# trading_vision

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  compose.yaml  config.example.toml  pyproject.toml
.github/: pull_request_template.md
docs/: ALERTS.md  BIST_CATALOG_POLICY.md  CANDLE_COMPLETION.md  CANDLE_GAPS.md  CHART_TIMELINE.md  DATA_FRESHNESS.md  DATA_QUALITY.md  DOCKER.md  DOUBLE_PATTERN_REVIEW.md  DRAWINGS.md  GLOSSARY.md  HEAD_SHOULDERS_REVIEW.md  LAUNCH_AGENT.md  MAINTENANCE.md  OPERATIONS.md  PATTERNS.md  PERFORMANCE.md  PRODUCT_CONTRACT.md  PROVIDER_REQUESTS.md  REPOSITORY_TEST_COVERAGE.md  SCANNER.md  SCANNER_RESULTS.md  SYMBOL_SEARCH.md  TRIANGLE_REVIEW.md  WATCHLISTS.md
migrations/: 001_initial.sql  002_patterns.sql  003_scanner.sql  004_alerts.sql  005_quality_warnings.sql  006_watchlists_settings.sql  007_symbol_asset_type.sql  008_drawings.sql
scripts/: check_data.py  refresh_bist_symbols.py  validate_catalog_provider_symbols.py
tests/: conftest.py  test_alert_ui.py  test_alerts.py  test_breakouts.py  test_candle_completion.py  test_candle_gaps.py  test_catalog.py  test_chart_builder.py  test_chart_load_cache.py  test_check_data_script.py  test_config.py  test_data_quality.py  test_database.py  test_double_patterns.py  test_drawing_repository.py  test_freshness.py  test_head_shoulders.py  test_health.py  test_indicators.py  test_live_provider.py  test_logging_setup.py  test_market_data_service.py  test_models.py  test_notifications.py  test_overlay_selection.py  test_pivots.py  (+20 more)
(+69 files in other folders)
