[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-vision"
version = "0.19.0"
description = "Interactive financial charts with explainable pattern detection."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dash>=3.0,<5",
    "numpy>=2.0,<3",
    "pandas>=2.2,<4",
    "plotly>=6.0,<7",
    "yfinance>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "ruff>=0.11,<1",
]

[project.scripts]
trading-vision = "trading_vision.ui.app:main"
trading-vision-db = "trading_vision.database:main"
trading-vision-worker = "trading_vision.worker:main"

[tool.setuptools.packages.find]
include = ["trading_vision*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
